# fca-gtools

./: .gitignore  .gitmodules  .prettierrc  README.md  index.html  package.json  rust-toolchain.toml  shell.nix  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile
src/: App.style.ts  App.tsx  AppRouter.tsx  i18n.ts  index.css  index.tsx  main.tsx
src-flask/: build.py  main.py  requirements.txt
src-flask/fcatools/: __init__.py
src-flask/fcatools/d-peeler/: d-peeler
src-flask/fcatools/dyadic/: dyadic_concept.py  dyadic_context.py
src-flask/fcatools/triadic/: triadic_concept.py  triadic_context.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20220323132339_create_projects_table.sql
src-tauri/src/: build.rs  main.rs  server.rs
src-tauri/src/server/: mod.rs  router.rs  utils.rs
src-tauri/src/server/handlers/: contexts_handler.rs  fca_tools_handler.rs  fcatools_handler.rs  mod.rs
src-tauri/src/server/models/: files.rs  mod.rs  triadic.rs
src-tauri/src/server/routes/: contexts_handler.rs  fca_tools_handler.rs  files_handler.rs  mod.rs
src/components/basepage/: BasePage.tsx
src/components/conceptsdatagrid/: ConceptsDataGrid.tsx
src/components/contextdatagrid/: ContextDataGrid.style.ts  ContextDataGrid.tsx  ContextDataGrid.utils.ts
src/components/datagrid/: ContextDataGrid.tsx  DataGrid.tsx
src/components/datagrid/components/: CheckboxCell.tsx  CheckboxCellRenderer.tsx
src/components/dialogmodal/: DialogModal.tsx
src/components/filedrop/: FileDrop.style.ts  FileDrop.tsx
src/components/flow/: Flow.tsx
src/components/iconmenu/: IconMenu.tsx
src/components/rulesdatagrid/: RulesDataGrid.tsx
src/components/sidebar/: Sidebar.tsx
src/dialogs/deleteAll/: DeleteAll.tsx
src/dialogs/newContext/: NewContext.tsx
src/models/: concept.ts  context.ts  project.ts  rule.ts
src/pages/concepts/: Concepts.tsx
src/pages/contexts/: Contexts.tsx
src/pages/contexts/card/: ContextCard.tsx  ProjectCard.tsx
src/pages/data/: Data.tsx
src/pages/editor/: Editor.tsx
src/pages/files/: Files.tsx
src/pages/files/card/: FileCard.tsx  ProjectCard.tsx
src/pages/home/: Home.style.ts  Home.tsx
src/pages/rules/: Rules.tsx
src/pages/settings/: Settings.tsx
src/redux/: store.ts
src/redux/concepts/: selectors.ts  slice.ts
src/redux/contexts/: actions.ts  selectors.ts  slice.ts
src/redux/data/: selectors.ts  slice.ts
src/redux/editor/: selectors.ts  slice.ts
src/redux/files/: actions.ts  selectors.ts  slice.ts
src/redux/rules/: actions.ts  selectors.ts  slice.ts
src/redux/settings/: selectors.ts  slice.ts
src/services/: api.ts  backend.ts
src/translations/: en-US.json  pt-BR.json
