[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
tauri = { version = "1.0.0-rc.6", features = ["api-all"] }
axum = { version = "0.4.8", features = [ "multipart" ] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["cors"] }
tokio = { version = "1.17.0", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "macros" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

[dependencies.pyo3]
version = "0.16.2"
features = ["auto-initialize"]

#[dependencies.pyo3]
#version = "0.15.1"
#features = ["auto-initialize"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
