[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
bytes = "1.1.0"
tauri = { version = "1.0.0", features = ["api-all"] }
axum = { version = "0.5.8", features = [ "multipart" ] }
reqwest = { version = "0.11.11", features = ["json"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors"] }
tokio = { version = "1.19.2", features = ["full"] }
sqlx = { version = "0.6.0", features = [ "runtime-tokio-native-tls" , "sqlite", "macros" ] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
directories = "4.0.1"
port-selector = "0.1.6"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
